k8s/app-v1.yaml
# app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v1
  template:
    metadata:
      labels:
        app: app
        version: v1
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      nodeSelector:
        node-role: app
        kubernetes.io/hostname: k8s-node-2
      containers:
      - name: app
        image: ghcr.io/remla25-team1/app:0.0.6-pre-20250528-002  # specify versioned image tag here
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: app-data
          mountPath: /app/data
        - name: shared-data
          mountPath: /mnt/shared
      volumes:
      - name: app-data
        emptyDir: {}
      - name: shared-data
        hostPath:
          path: /mnt/shared
          type: Directory
