k8s/model-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-service
  template:
    metadata:
      labels:
        app: model-service
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      nodeSelector:                
        node-role: model           # This will schedule the model-service pod only on nodes labeled with node-role=model
        kubernetes.io/hostname: k8s-node-1 # we will run model-service on node 1
      containers:
      - name: model-service
        image: ghcr.io/remla25-team1/model-service:latest
        ports:
        - containerPort: 8080      # these are still hardcoded, and should be coming from an env i think
        volumeMounts:
        - name: app-data
          mountPath: /app/data
        - name: shared-data
          mountPath: /mnt/shared
      volumes:
      - name: app-data
        emptyDir: {}
      - name: shared-data
        hostPath:
          path: /mnt/shared # shared mount for all VMs
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  selector:
    app: model-service
  ports:
    - protocol: TCP
      port: 8081 # exposed port
      targetPort: 8080 # port used inside the pod
